<resources>
    <string name="app_name" translatable="false">GiphyClone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="trending">Trending GIFs</string>
    <string name="favorite">Favorites</string>
    <string name="searchHint">Search all the GIFs</string>
    <string name="hashtag" translatable="false">#%s</string>
    <string name="gifs" translatable="false">GIFs</string>
    <string name="stickers" translatable="false">Stickers</string>
    <string name="source" translatable="false">Source</string>
    <string name="unknown" translatable="false">Unknown</string>
    <string name="searchResult">Search result</string>
    <string name="recentSearch">Recent searches</string>
    <string name="relatedSearch">Related searches</string>
    <string name="popularSearch">Popular searches</string>
    <string name="backButtonDescription">Back button</string>
    <string name="emptyFavorite">No Favorites Yet</string>
    <string name="checkConnection">Please check the connection status</string>
</resources>
