<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.SearchFragment"
    android:background="#000000"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <ImageView
        android:id="@+id/backBtnImg"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_arrow_back_white_48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtnImg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/backBtnImg"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/keywordConstraint"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtnImg"
        app:layout_constraintRight_toLeftOf="@+id/searchBtn">

    <EditText
        android:id="@+id/keywordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:paddingStart="8dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:hint="@string/searchHint"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/clearBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_goneMarginRight="4dp"/>

        <ImageView
            android:id="@+id/clearBtn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_clear_white_48dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/searchBtn"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_search_white_48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/keywordConstraint"
        app:layout_constraintBottom_toBottomOf="@+id/keywordConstraint"
        android:background="@drawable/search_gradient"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/keywordConstraint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintBottom_toTopOf="@+id/errorText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gifBtn"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@color/green"
                android:text="@string/gifs"
                android:textSize="@dimen/subTitleSize"
                android:textColor="#000000"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/stickerBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/stickerBtn"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@color/gray"
                android:text="@string/stickers"
                android:textSize="@dimen/subTitleSize"
                android:textColor="#000000"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/gifBtn"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/relatedTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recentSearch"
                android:textSize="@dimen/subTitleSize"
                android:layout_margin="4dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gifBtn"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentKeywordRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:scrollbars="none"
                android:overScrollMode="never"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relatedTitle"/>

            <TextView
                android:id="@+id/popularTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/popularSearch"
                android:textSize="@dimen/subTitleSize"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recentKeywordRecycler"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popularTitle"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/checkConnection"
        android:textColor="@color/white"
        android:background="@color/red"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>