<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".view.fragment.TrendingFragment">

    <ImageView
        android:id="@+id/logoTrending"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="8dp"
        app:srcCompat="@drawable/giphy_logo_png"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trending"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/logoTrending"
        app:layout_constraintTop_toTopOf="@+id/logoTrending"
        app:layout_constraintBottom_toBottomOf="@+id/logoTrending"/>
    
    <TextView
        android:id="@+id/textBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"

        android:paddingStart="8dp"
        android:background="@color/white"
        android:textColor="@color/gray"
        android:text="@string/searchHint"
        android:textSize="16sp"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTrending"
        app:layout_constraintRight_toLeftOf="@+id/searchBtn"/>

    <ImageView
        android:id="@+id/searchBtn"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_search_white_48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTrending"
        app:layout_constraintTop_toTopOf="@+id/textBtn"
        app:layout_constraintBottom_toBottomOf="@+id/textBtn"
        android:background="@drawable/search_gradient"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBtn"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTrending"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintBottom_toTopOf="@+id/errorText" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/checkConnection"
        android:textColor="@color/white"
        android:background="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/recyclerTrending"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>